UC-63 Website Design Updated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     			<h5>A Open-Source platform</h5>
     			<h1>To track, engage and<br/>convert users of your application</h1>
     			<p>Record events performed by them to improve usability with the help of reported metrics</p>
-    			<a href="" class="ucBannerBtn">DOWNLOAD v 1.0</a>
+    			<a href="https://github.com/produle/usercomio" target="blank" class="ucBannerBtn">DOWNLOAD v 1.0</a>
     		</div>
     	</div>
     	<div class="ribbon"><a href="https://github.com/produle/usercomio" target="blank">Fork me on GitHub</a></div>
